# DuLichNgocHuu.githud.io

./: .gitignore  README.md  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
polls/: admin.py  models.py
polls/migrations/: 0001_initial.py
shop/: settings.py  urls.py  views.py
shop/static/css/: style.css
shop/static/js/: main.js
static/css/: style.css
templates/: base.html  home.html  main.css  main.js
templates/components/: footer.html  header.html
templates/pages/: Price.html  book_ticket.html  inbox.html  trend.html
ticket/: models.py  urls.py  views.py
ticket/migrations/: 0001_initial.py
