[tool.poetry]
name = "dulichngochuu-githud-io"
version = "0.1.0"
description = ""
authors = ["chuvietanh392003 <130541979+chuvietanh392003@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dulichngochuu"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
